--- a/docs/.vuepress/styles/palette.styl
+++ b/docs/.vuepress/styles/palette.styl
@@ -1,1 +1,7 @@
 $nprogressColor = dodgerblue
+
+$readingBgColor = transparent
+$readingZIndex = 1000
+$readingSize = 3px
+$readingProgressColor = dodgerblue
+$readingProgressImage = linear-gradient(-120deg, #E50743 0%, #F9870F 15%, #E8ED30 30%, #3FA62E 45%, #3BB4D7 60%, #2F4D9E 75%, #71378A 80%)
