--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -1,3 +1,11 @@
 .action-button{
-  color: #222;
+  color: #222 !important;
 }
+.hero img{
+  width:294px !important;
+  height:280px !important;
+  }
+.logo{
+  width:37px !important;
+  height:35px !important;
+  }
